# docs/swagger.yaml
@@ -1,12 +1,37 @@
 info:
   contact: {}
 paths:
+  /add-category:
+    post:
+      parameters:
+      - description: authorization
+        in: header
+        name: authorization
+        required: true
+        type: string
+      - description: name
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: parentId
+        in: formData
+        name: parentId
+        type: string
+      responses:
+        "200":
+          description: '{"code":200,"data":""}'
+          schema:
+            type: string
+      summary: 分类创建
+      tags:
+      - 管理员私有方法
   /add-problem:
     post:
       parameters:
-      - description: token
+      - description: authorization
         in: header
-        name: token
+        name: authorization
         required: true
         type: string
       - description: title
@@ -73,6 +98,27 @@ paths:
           schema:
             type: string
       summary: 获取分类列表
+      tags:
+      - 管理员私有方法
+  /del-category:
+    delete:
+      parameters:
+      - description: authorization
+        in: header
+        name: authorization
+        required: true
+        type: string
+      - description: identity
+        in: query
+        name: identity
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{"code":200,"data":""}'
+          schema:
+            type: string
+      summary: 分类删除
       tags:
       - 管理员私有方法
   /login:
@@ -217,6 +263,36 @@ paths:
       summary: 提交列表
       tags:
       - 公共方法
+  /update-category:
+    put:
+      parameters:
+      - description: authorization
+        in: header
+        name: authorization
+        required: true
+        type: string
+      - description: identity
+        in: header
+        name: identity
+        required: true
+        type: string
+      - description: name
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: parentId
+        in: formData
+        name: parentId
+        type: string
+      responses:
+        "200":
+          description: '{"code":200,"data":""}'
+          schema:
+            type: string
+      summary: 分类修改
+      tags:
+      - 管理员私有方法
   /user-detail:
     get:
       parameters:
